;;;; -*- coding: utf-8; -*-
changes in sbcl-0.9.7 relative to sbcl-0.9.6:
  * bug fix: it is now possible to have more than one subclass of
    STANDARD-GENERIC-FUNCTION without causing stack overflow.
    (reported by Bruno Haible, Pascal Costanza and others)
  * bug fix: the dependent update protocol now works for generic
    functions.  (thanks to Gerd Moellmann; reported by Bruno Haible
    and Pascal Costanza)
  * bug fix: *COMPILE-FILE-PATHNAME* now contains the user's pathname
    merged with *DEFAULT-PATHNAME-DEFAULTS*.
  * optimization: performance improvements to IO on file streams of
    :ELEMENT-TYPE CHARACTER

changes in sbcl-0.9.6 relative to sbcl-0.9.5:
  * bug fix: add a workaround to SBCL looping infinitely at startup on
    Linux kernels with apparently buggy implementations of personality().
    (thanks to Svein Ove Aas)
  * bug fix: Unicode symbols are correctly printed in LDB backtraces
    (thanks to David Lichteblau)
  * bug fix: local bindings shadow global symbol macros for
    macroexpansion.  (reported by Matthew D Swank on comp.lang.lisp)
  * optimization: non-open coded uses of numeric comparison operators
    (e.g. >) no longer cons when called with more than one parameter
    on platforms supporting dynamic-extent allocation.
  * enhancement: saving cores with foreign code loaded is now supported
    on MIPS/Linux in addition to the previously supported platforms.
  * bug fix: FIND-RESTART now tests for activity, not applicability when given
    a restart object as identifier. (reported by Helmut Eller for CMUCL)
  * bug fix: division by zero in sb-sprof when no samples were collected
  * bug fix: a race when a slow to arrive sigprof signal killed sbcl
  * bug fix: asdf-install uses CRLF as required by the HTTP spec.
    (thanks to Alexander Kjeldaas)
  * new feature: ignoring the return values of destructive functions
    like NREVERSE signals a compile-time style-warning.
    (thanks to Kevin Reid)